Remove DocumentedException.ErrorSeverity
Use ErrorServerity from yang-common, eliminating some amount of
duplication. This also allows us to take advantage of bidirectional
mapping to (now legacy) RpcError.ErrorSeverity.

// FIXME: revert the Map.of() changes for multi-element maps due
//        to iteration order

Change-Id: Ie7e592233e6a948a9a991e4309315e1fb857b8d2
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>